--- a/WoldCupApp18/src/Views/FXMLMAPStation.fxml
+++ b/WoldCupApp18/src/Views/FXMLMAPStation.fxml
@@ -13,14 +13,14 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="589.0" prefWidth="747.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLMAPStationController">
+<AnchorPane id="AnchorPane" prefHeight="589.0" prefWidth="747.0" style="-fx-background-color: #353b48;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLMAPStationController">
    <children>
-      <Label layoutX="290.0" layoutY="27.0" text="Station Localisation">
+      <Label layoutX="288.0" layoutY="15.0" text="Station Location" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
       <GoogleMapView fx:id="gmap" layoutX="92.0" layoutY="129.0" prefHeight="531.0" prefWidth="747.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <Button fx:id="retour" layoutX="580.0" layoutY="30.0" mnemonicParsing="false" onAction="#ReturnToListStadium" text="Retour" />
+      <Button fx:id="retour" layoutX="580.0" layoutY="30.0" mnemonicParsing="false" onAction="#ReturnToListStadium" text="Back" textFill="#1e116f" />
    </children>
 </AnchorPane>
