--- a/WoldCupApp18/src/Views/FXMLPasswordRecovery.fxml
+++ b/WoldCupApp18/src/Views/FXMLPasswordRecovery.fxml
@@ -7,13 +7,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLPasswordRecoveryController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #353b48;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLPasswordRecoveryController">
    <children>
-      <Label layoutX="179.0" layoutY="56.0" text="How do you want to recover your password ? " />
-      <RadioButton fx:id="smsOption" layoutX="127.0" layoutY="129.0" mnemonicParsing="false" text="Sms ?" />
-      <RadioButton fx:id="emailOption" layoutX="140.0" layoutY="225.0" mnemonicParsing="false" text="Email ?" />
-      <JFXTextField fx:id="emailfield" layoutX="215.0" layoutY="221.0" />
-      <JFXTextField fx:id="smsfield" layoutX="198.0" layoutY="125.0" />
-      <JFXButton fx:id="sendPass" layoutX="231.0" layoutY="314.0" text="Send confirmation" />
+      <Label layoutX="179.0" layoutY="48.0" prefHeight="25.0" prefWidth="254.0" text="How do you want to recover your password ? " textFill="#f5f0f0" />
+      <RadioButton fx:id="smsOption" layoutX="127.0" layoutY="129.0" mnemonicParsing="false" text="Sms ?" textFill="#f2ecec" />
+      <RadioButton fx:id="emailOption" layoutX="124.0" layoutY="225.0" mnemonicParsing="false" text="Email ?" textFill="#fffafa" />
+      <JFXTextField fx:id="emailfield" layoutX="221.0" layoutY="221.0" style="-fx-background-color: #dcdde1;" />
+      <JFXTextField fx:id="smsfield" focusColor="#41589e" layoutX="221.0" layoutY="125.0" style="-fx-background-color: #dcdde1;" />
+      <JFXButton fx:id="sendPass" layoutX="231.0" layoutY="314.0" text="Send confirmation" textFill="#f2eded" />
    </children>
 </AnchorPane>
