--- a/WoldCupApp18/src/Views/FXMLHotel.fxml
+++ b/WoldCupApp18/src/Views/FXMLHotel.fxml
@@ -7,28 +7,28 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="Controllers.FXMLHotelController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLHotelController">
    <children>
-      <AnchorPane id="AnchorPane" layoutX="10.0" layoutY="10.0" prefHeight="548.0" prefWidth="712.0">
+      <AnchorPane id="AnchorPane" layoutX="10.0" layoutY="10.0" prefHeight="515.0" prefWidth="840.0" style="-fx-background-color: #353b48;">
          <children>
-            <Label layoutX="237.0" layoutY="25.0" prefHeight="24.0" prefWidth="111.0" text="Hotel">
+            <Label layoutX="255.0" layoutY="25.0" prefHeight="40.0" prefWidth="203.0" text="Add an hotel" textFill="#f8f5f5">
                <font>
                   <Font size="28.0" />
                </font>
             </Label>
-            <Label layoutX="46.0" layoutY="92.0" text="Nom de l'hotel:" />
-            <Label layoutX="46.0" layoutY="124.0" text="Localisation de l'hotel:" />
-            <Label layoutX="46.0" layoutY="160.0" text="Nombre d'etoiles:" />
-            <Label layoutX="46.0" layoutY="200.0" text="Localisation x de l'hotel:" />
-            <Label layoutX="46.0" layoutY="233.0" text="localisation y de l'hotel:" />
+            <Label layoutX="46.0" layoutY="92.0" text="Hotel name:" textFill="#f8f7f7" />
+            <Label layoutX="46.0" layoutY="124.0" text="Hotel Location:" textFill="#f5f2f2" />
+            <Label layoutX="46.0" layoutY="160.0" text="Hotel Stars:" textFill="#fffafa" />
+            <Label layoutX="46.0" layoutY="200.0" text="Hotel x location:" textFill="#f8f7f7" />
+            <Label layoutX="46.0" layoutY="233.0" text="Hotel y location:" textFill="#e8e6e6" />
             <TextField fx:id="hotelname" layoutX="199.0" layoutY="88.0" />
             <TextField fx:id="hotellocation" layoutX="199.0" layoutY="120.0" />
             <TextField fx:id="nbretoiles" layoutX="199.0" layoutY="156.0" />
             <TextField fx:id="hotelx" layoutX="199.0" layoutY="196.0" />
             <TextField fx:id="hotely" layoutX="199.0" layoutY="229.0" />
-            <Button fx:id="addhotel" layoutX="374.0" layoutY="229.0" mnemonicParsing="false" onAction="#AddHotel" text="ajouter hotel" />
-            <Button fx:id="annuler" layoutX="474.0" layoutY="229.0" mnemonicParsing="false" onAction="#Empltyfields" text="annuler" />
+            <Button fx:id="addhotel" layoutX="107.0" layoutY="315.0" mnemonicParsing="false" onAction="#AddHotel" text="Add hotel" />
+            <Button fx:id="annuler" layoutX="274.0" layoutY="315.0" mnemonicParsing="false" onAction="#Empltyfields" text="Cancel" />
+            <Button fx:id="hotel_menu" layoutX="419.0" layoutY="315.0" mnemonicParsing="false" onAction="#SwitchToHotelMenu" text="Hotel menu" />
          </children>
       </AnchorPane>
    </children>
