--- a/WoldCupApp18/src/Views/FXMLadminHotel.fxml
+++ b/WoldCupApp18/src/Views/FXMLadminHotel.fxml
@@ -10,9 +10,9 @@
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FXMLadminHotelController">
    <children>
-      <AnchorPane id="AnchorPane" layoutX="10.0" layoutY="10.0" prefHeight="654.0" prefWidth="874.0">
+      <AnchorPane id="AnchorPane" layoutX="10.0" layoutY="10.0" prefHeight="654.0" prefWidth="874.0" style="-fx-background-color: #353b48;">
          <children>
-            <Label layoutX="290.0" layoutY="22.0" text="Hotels List">
+            <Label layoutX="290.0" layoutY="22.0" text="Hotels List" textFill="#fcf7f7">
                <font>
                   <Font size="30.0" />
                </font>
@@ -35,11 +35,11 @@
             <Button fx:id="add" layoutX="227.0" layoutY="96.0" mnemonicParsing="false" onAction="#addhotel" text="add hotel" />
             <TextField fx:id="Recherche" layoutX="323.0" layoutY="96.0" promptText="Rechercher" />
             <ChoiceBox fx:id="choiseBox" layoutX="482.0" layoutY="96.0" prefHeight="25.0" prefWidth="126.0" />
-            <Label layoutX="21.0" layoutY="356.0" text="hotel name:" />
-            <Label layoutX="21.0" layoutY="393.0" text="hotel location:" />
-            <Label layoutX="21.0" layoutY="426.0" text="hotel stars:" />
-            <Label layoutX="20.0" layoutY="465.0" text="hotel XMAP :" />
-            <Label layoutX="21.0" layoutY="499.0" text="hootel YMAP :" />
+            <Label layoutX="21.0" layoutY="356.0" text="hotel name:" textFill="#f8f5f5" />
+            <Label layoutX="21.0" layoutY="393.0" text="hotel location:" textFill="#eee8e8" />
+            <Label layoutX="21.0" layoutY="426.0" text="hotel stars:" textFill="#f8f5f5" />
+            <Label layoutX="20.0" layoutY="465.0" text="hotel XMAP :" textFill="#f5efef" />
+            <Label layoutX="21.0" layoutY="499.0" text="hootel YMAP :" textFill="#f8f0f0" />
             <TextField fx:id="hotelName" layoutX="141.0" layoutY="352.0" promptText="hotel name" />
             <TextField fx:id="hotelLocation" layoutX="141.0" layoutY="389.0" promptText="hotel location" />
             <TextField fx:id="HOTELSTARS" layoutX="141.0" layoutY="422.0" promptText="hotel stars" />
